Write mattjmcnaughton.rasp-pi-cleanup role
The `rasp-pi-cleanup` role cleans up RaspPi defaults that we don't care
for.

Currently, its only deleting the default `ubuntu` user and doing some
light ssh config hardening.

This could become part of the base role in the future, but for now, I'm
keeping it separate.

--- a/provisioning/roles/mattjmcnaughton.rasp-pi-cleanup/defaults/main.yml
+++ b/provisioning/roles/mattjmcnaughton.rasp-pi-cleanup/defaults/main.yml
@@ -1,2 +1,6 @@
 ---
-# defaults file for mattjmcnaughton.rasp-pi-cleanup
+mattjmcnaughton_rasp_pi_cleanup_users_to_remove:
+  - "ubuntu"
+
+mattjmcnaughton_rasp_pi_cleanup_ssh_disable_password: true
+mattjmcnaughton_rasp_pi_cleanup_sshd_config_path: "/etc/ssh/sshd_config"
