--- a/provisioning/roles/mattjmcnaughton.rasp-pi-cleanup/handlers/main.yml
+++ b/provisioning/roles/mattjmcnaughton.rasp-pi-cleanup/handlers/main.yml
@@ -1,2 +1,7 @@
 ---
-# handlers file for mattjmcnaughton.rasp-pi-cleanup
+- name: Restart ssh server
+  service:
+    name: ssh
+    state: restarted
+  listen: restart ssh server
+  become: yes
