Add init and clean up playbooks
Add the init and clean up playbooks - both have been run against a
Raspberry Pi on which we only performed the base set up (i.e. connected
to WiFi).

I've provisioned one RaspPi. I need to provision two more and then I'll
start working on the base role (which sets up firewall, sec updates,
common packages, configs etc...) and then will start working on
application specific roles. I'm thinking I'll start w/ an nfs (backed by
zfs), a git server, and a wireguard server.

--- a/provisioning/roles/mattjmcnaughton.rasp-pi-from-scratch-init/tasks/hostname.yml
+++ b/provisioning/roles/mattjmcnaughton.rasp-pi-from-scratch-init/tasks/hostname.yml
@@ -2,4 +2,5 @@
 - name: Update hostname
   hostname:
     name: "{{ mattjmcnaughton_rasp_pi_from_scratch_init_hostname }}"
+  become: yes
   when: mattjmcnaughton_rasp_pi_from_scratch_init_hostname != ""
