Fix syntax error w/ from-scratch-init playbook
Fix a syntax error which I didn't notice because I never actually tested
trying to run the playbook after the changes to not require provisioning
file systems.

At this point, my three Rasp Pi's are provisioned.

Next step is writing the base role and applying it to all of them. Then
we can think about application specific tasks.

For now, I hard code the IPs in the hosts file. They are not static IPs,
so could change if the RaspPis restart. However, that's fairly unlikely.

I'll look into getting static IPs when back in a more permanent
location.

--- a/provisioning/playbooks/rasp-pi-from-scratch-init.yml
+++ b/provisioning/playbooks/rasp-pi-from-scratch-init.yml
@@ -58,12 +58,12 @@
       private: no
 
   tasks:
-    set_fact:
-      filesystems:
-        - fstype: "{{ filesystem_fstype }}"
-          device_path: "{{ filesystem_device_path }}"
-          mount_path: "{{ filesystem_mount_path }}"
-    when: filesystem_should_configure == "yes"
+    - set_fact:
+        filesystems:
+          - fstype: "{{ filesystem_fstype }}"
+            device_path: "{{ filesystem_device_path }}"
+            mount_path: "{{ filesystem_mount_path }}"
+      when: filesystem_should_configure == "yes"
 
     - include_role:
         name: mattjmcnaughton.rasp-pi-from-scratch-init
