Use ubuntu 20.04 for all my tests
Previously, I couldn't use ubuntu 20.04 bc I couldn't get it to work w/
`ansible-kitchen` (a combination of issues w/ pip vs pip3 and
ppa:ansible/ansible).

However, I realized I could fix these problems by not attempting to use
`ppa:ansible/ansible` and setting the repo to be `multiverse`. This
makes the step to add the additional repo a no-op (i.e. doesn't fail)
and then we can just download ansible from the default ubuntu repo
(which works perfectly fine).

This diff makes the change for all of our previous roles.

--- a/provisioning/roles/mattjmcnaughton.rasp-pi-base/kitchen.yml
+++ b/provisioning/roles/mattjmcnaughton.rasp-pi-base/kitchen.yml
@@ -5,12 +5,9 @@ driver:
 
 platforms:
   # Will run tests for each platform
-  # @TODO(mattjmcnaughton) I'd really like to use Ubuntu 20.04 here (as that's
-  # what I'm using on the Rasp Pi's), but none of the `kitchen-ansible`
-  # provisioner methods for installing ansible work w/ 20.04.
-  - name: ubuntu-18.04
+  - name: ubuntu-20.04
     driver_config:
-      box: bento/ubuntu-18.04
+      box: bento/ubuntu-20.04
 
 # Will automatically execute the playbook in
 # `test/integration/${suite}/${suite}.yml`
@@ -19,7 +16,11 @@ provisioner:
   name: ansible_playbook
   roles_path: ../
   ansible_verbose: false
-  ansible_version: latest
+  # Setting to multiverse is a hack until `ppa:ansible/ansible` works for focal.
+  # Since the `multiverse` ppa is already enabled, this is essentially a no-op.
+  # It allows the apt repo step to succeed and we can proceed to install ansible
+  # via the normal focal repo (not the ansible/ansible ppa).
+  ansible_apt_repo: "multiverse"
   require_chef_for_busser: false
 
 # Will automatically run tests in `test/integration/${suite}`
