--- a/provisioning/roles/mattjmcnaughton.rasp-pi-from-scratch-init/kitchen.yml
+++ b/provisioning/roles/mattjmcnaughton.rasp-pi-from-scratch-init/kitchen.yml
@@ -5,12 +5,9 @@ driver:
 
 platforms:
   # Will run tests for each platform
-  # @TODO(mattjmcnaughton) I'd really like to use Ubuntu 20.04 here (as that's
-  # what I'm using on the Rasp Pi's), but none of the `kitchen-ansible`
-  # provisioner methods for installing ansible work w/ 20.04.
-  - name: ubuntu-18.04
+  - name: ubuntu-20.04
     driver_config:
-      box: bento/ubuntu-18.04
+      box: bento/ubuntu-20.04
 
 # Will automatically execute the playbook in
 # `test/integration/${suite}/${suite}.yml`
@@ -19,7 +16,11 @@ provisioner:
   name: ansible_playbook
   roles_path: ../
   ansible_verbose: false
-  ansible_version: latest
+  # Setting to multiverse is a hack until `ppa:ansible/ansible` works for focal.
+  # Since the `multiverse` ppa is already enabled, this is essentially a no-op.
+  # It allows the apt repo step to succeed and we can proceed to install ansible
+  # via the normal focal repo (not the ansible/ansible ppa).
+  ansible_apt_repo: "multiverse"
   require_chef_for_busser: false
 
 # Will automatically run tests in `test/integration/${suite}`
