Add more fundamentals of zfs-nas role
Add more components of the `zfs-nas` role. Specifically, add the
components that actually create the `zpool` and `zfs datasets`.

The `zfs` support is ok... we can create datasets via Ansible, but not
zpool. W.r.t. inspec, we need to use command, as we can't use the
`inspec` ZFS resources. See https://github.com/inspec/inspec/issues/5075
for more details.

--- a/provisioning/roles/mattjmcnaughton.zfs-nas/tasks/main.yml
+++ b/provisioning/roles/mattjmcnaughton.zfs-nas/tasks/main.yml
@@ -1,3 +1,7 @@
 ---
 - name: Install packages
   include_tasks: "packages.yml"
+
+- name: Manage zpool and datasets
+  include_tasks: "zfs.yml"
+  with_items: "{{ mattjmcnaughton_zfs_nas_zfs_specifications }}"
