Complete zfs-nas role
Complete the `zfs-nas` role (at least for now).

Add the ability to provision a zpool and both encrypted and unencrypted
datasets. Note, because the `zfs` module in ansible doesn't support
passphrases, we need to use the command line, and the `expect` module.
Which I actually think ends up working fine. Another option would've
been to store the encryption key on a file, but it feels like that
defeats the point. Perhaps I'll reexamine later...

Also, update the `nfs.yml` playbook to actually execute the zfs role on
the host.

I'm not actually sure if `nfs` is the most appropriate name going
forward. I haven't decided yet if I'm actually going to make the zfs
datasets available over the network, or just copy over the data I want
via ssh, scp, rsync, etc...

--- a/provisioning/playbooks/nfs.yml
+++ b/provisioning/playbooks/nfs.yml
@@ -1,7 +1,30 @@
 ---
 - hosts: nfs
+
+  vars_prompt:
+    - name: "zfs_encryption_password"
+      prompt: "zfs_encryption_password"
+      confirm: yes
+      private: yes
+
   tasks:
     - include_role:
         name: mattjmcnaughton.rasp-pi-base
       vars:
         mattjmcnaughton_rasp_pi_base_username: "mattjmcnaughton"
+
+    - include_role:
+        name: mattjmcnaughton.zfs-nas
+      vars:
+        mattjmcnaughton_zfs_nas_zfs_specifications:
+          - pool: tank
+            vdevs:
+              - /dev/sda
+            datasets:
+              - name: tank/mattjmcnaughton-encrypted
+                options_str: "-o encryption=on -o keyformat=passphrase -o keylocation=prompt"
+                encryption_passphrase: "{{ zfs_encryption_password }}"
+                dirs:
+                  - relative_path: nas
+                    owner: mattjmcnaughton
+                    mode: '0755'
