--- a/provisioning/roles/mattjmcnaughton.zfs-nas/tasks/zfs.yml
+++ b/provisioning/roles/mattjmcnaughton.zfs-nas/tasks/zfs.yml
@@ -13,15 +13,12 @@
         should_create_zpool: zpool_facts.failed == true
 
     - name: Create zpool
-      command: "zpool create {{ item.pool }} {{ item.vdevs | join(' ') }}"
+      # Need the `-f` when using w/ Rasp Pi. Eitherwise we got warnings around
+      # the disk being part of a potentially active pool.
+      command: "zpool create -f {{ item.pool }} {{ item.vdevs | join(' ') }}"
       when: should_create_zpool
 
-    - name: Create zfs dataset
-      zfs:
-        name: "{{ dataset.name }}"
-        state: present
-        extra_zfs_properties: "{{ dataset.properties }}"
-      loop: "{{ item.datasets }}"
-      loop_control:
-        loop_var: dataset
+    - name: Create datasets
+      include_tasks: "dataset.yml"
+      with_items: "{{ item.datasets }}"
   become: yes
