Initial home assistant container config
Base role for deploying the initial home assistant container.

Simple tests via inspec.

Once I have home-assistant launched, I can think about a back
up/automation strategy. In good news, it looks like pretty much all components of it
are stored in the `/config` dir, which is good.

--- a/provisioning/roles/mattjmcnaughton.docker/kitchen.yml
+++ b/provisioning/roles/mattjmcnaughton.docker/kitchen.yml
@@ -6,9 +6,9 @@ driver:
 
 platforms:
   # Will run tests for each platform
-  - name: ubuntu-18.04
+  - name: ubuntu-20.04
     driver_config:
-      box: ubuntu/bionic64
+      box: ubuntu/focal64
 
 # Will automatically execute the playbook in
 # `test/integration/${suite}/${suite}.yml`
