--- a/provisioning/roles/mattjmcnaughton.home-assistant/tasks/main.yaml
+++ b/provisioning/roles/mattjmcnaughton.home-assistant/tasks/main.yaml
@@ -3,11 +3,33 @@
   include_role:
     name: mattjmcnaughton.docker
 
-- name: Run vidzou container
+- name: Create directory for homeassistant data
+  ansible.builtin.file:
+    path: "{{ home_assistant_host_data_dir }}"
+    owner: "{{ ansible_user_id }}"
+    group: "{{ ansible_user_id }}"  # Assuming an equivalent group exists for the user.
+    state: directory
+    mode: "0755"
+
+# See https://docs.linuxserver.io/images/docker-homeassistant for the full list
+# of options we can specify.
+- name: Run homeassistant container
+  # Should be replaced w/ `community.general.docker_container` (but I need to
+  # determine how I want to specify installing this collection).
   docker_container:
     name: homeassistant
     image: "{{ home_assistant_image_tag }}"
     state: started
     restart_policy: unless-stopped
-    # See https://fleet.linuxserver.io/image?name=linuxserver/homeassistant for
-    # what else we want to speciy.
+    # We set `net=host` so that homeassistant can discover devices on its
+    # network.
+    #
+    # Since we set `net=host`, we do not need to specify port forwarding. Any
+    # ports open on the container are also open from the host.
+    network_mode: host
+    env:
+      TZ: "{{ home_assistant_tz }}"
+      PUID: "{{ ansible_real_user_id | quote }}"
+      PGID: "{{ ansible_real_group_id | quote }}"
+    volumes:
+      - "{{ home_assistant_host_data_dir }}:{{ home_assistant_container_data_dir }}"
