Provision home-assistant on Rasp-Pi
W/ this commit, able to run `home-assistant.yml` playbook to provision
home assistant on the rasp pi.

We still need to set up integrations and also an nginx proxy (w/ ssl),
but for now, a great first step.

--- a/provisioning/playbooks/home-assistant.yml
+++ b/provisioning/playbooks/home-assistant.yml
@@ -1,7 +1,27 @@
 ---
+# Provision home-assistant on rasp-pi
+#
+# Run w/ the following:
+# `ansible-playbook -K home-assistant.yml`
+#
+# Currently, we access the web ui by opening 8123 on the firewall,
+# and can access home-assistant via `IP:8123`.
+# In the medium-term, we will most likely want to place nginx in front of the container (with our
+# mattjmcnaughton.io SSL cert) and then open up port 443. We will need to solve
+# internal DNS, but in the short term, we can hack that with `/etc/hosts`
+# updates.
 - hosts: home-assistant
   tasks:
     - include_role:
         name: mattjmcnaughton.rasp-pi-base
       vars:
         mattjmcnaughton_rasp_pi_base_username: "mattjmcnaughton"
+        mattjmcnaughton_rasp_pi_base_ufw_incoming_ports_to_allow:
+          - "22"
+          - "8123"
+    - include_role:
+        name: mattjmcnaughton.home-assistant
+      vars:
+        # `/opt/fs` is created by our rasp-pi-from-scratch-init.yml playbook.
+        # Long term, we may want to have this directory on an NFS share or ...
+        mattjmcnaughton_home_assistant_host_data_dir: /opt/fs/homeassistant
