[WIP] Configure CloudFree2 Smart Plug and Tasmota
SmartPlug is working great and we have it talking to Home Assistant!

The next thing is that we need to provision MQTT via ansible (currently,
I installed from scratch w/ `apt` while ssh'd). The
`cloudfree-smart-plug2.md` contains instructions.

--- a/provisioning/playbooks/home-assistant.yml
+++ b/provisioning/playbooks/home-assistant.yml
@@ -19,6 +19,7 @@
           - "22"
           - "80"
           - "443"
+          - "1883"  # Need to allow traffic to mqtt broker
     - include_role:
         name: mattjmcnaughton.home-assistant
       vars:
