Configure Mqtt integration via HA configuration.yaml
Update `configuration.yaml` for HA to configure MQTT (preventing us from
needing to configure via the UI).

However, I could not find a similar method for configuration the Tasmota
integration via the UI. For now, we will need to continue doing that via
the UI. I updated the docs for cloudfree-smart-plug2 accordingly.

--- a/provisioning/playbooks/home-assistant.yml
+++ b/provisioning/playbooks/home-assistant.yml
@@ -32,6 +32,9 @@
         # `/opt/fs` is created by our rasp-pi-from-scratch-init.yml playbook.
         # Long term, we may want to have this directory on an NFS share or ...
         mattjmcnaughton_home_assistant_host_data_dir: /opt/fs/homeassistant
+        mattjmcnaughton_home_assistant_mqtt_config:
+          username: homeassistant
+          password: "{{ home_assistant_mqtt_password }}"
 
     # We leave adding the `mattjmcnaughton.io` certs as a separate playbook
     # via the `rasp-pi-copy-ssl-certs.yml` playbook.
